Полная разметка макета

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
@@ -47,13 +47,13 @@
             Эффективные решения<br />
             для вашего бизнеса
           </h1>
-          <botton type="botton">Заказать услугу</botton>
+          <!-- <botton type="botton">Заказать услугу</botton> -->
         </div>
       </section>
 
       <!--Особенности-->
       <section>
-        <h2>Особенности</h2>
+        <h2 hidden>Особенности</h2>
         <ul>
           <li>
             <img
@@ -111,7 +111,7 @@
         <ul>
           <li>
             <img
-              src="./Чем мы занимаемся/1.png"
+              src="./Чем_мы_занимаемся/1.png"
               alt="ноутбук"
               width="370"
               height="294"
@@ -120,7 +120,7 @@
           </li>
           <li>
             <img
-              src="./Чем мы занимаемся/2.png"
+              src="./Чем_мы_занимаемся/2.png"
               alt="телефон"
               width="370"
               height="294"
@@ -128,8 +128,12 @@
             <h3>Мобильные приложения</h3>
           </li>
           <li>
-            <img src="./Чем мы занимаемся/3.png" alt="экран компьютера
-            width="370" height="294" />
+            <img
+              src="./Чем_мы_занимаемся/3.png"
+              alt="экран компьютера"
+              width="370"
+              height="294"
+            />
             <h3>Дизайнерские решения</h3>
           </li>
         </ul>
@@ -141,13 +145,13 @@
         <ul>
           <li>
             <img
-              src="./Наша команда/1.png"
+              src="./Наша_команда/1.png"
               alt=" фото Николай Кучеренко"
               width="270"
               height="260"
             />
             <h3>Николай Кучеренко</h3>
-            <p>Product Designer</p>
+            <p lang="en">Product Designer</p>
             <ul>
               <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
               <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
@@ -157,13 +161,13 @@
           </li>
           <li>
             <img
-              src="./Наша команда/2.png"
+              src="./Наша_команда/2.png"
               alt="фото Ольга Иванова"
               width="270"
               height="260"
             />
             <h3>Ольга Иванова</h3>
-            <p>Frontend Developer</p>
+            <p lang="en">Frontend Developer</p>
             <ul>
               <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
               <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
@@ -173,13 +177,13 @@
           </li>
           <li>
             <img
-              src="./Наша команда/3.png"
+              src="./Наша_команда/3.png"
               alt="фото Андрей Шевченко"
               width="270"
               height="260"
             />
             <h3>Андрей Шевченко</h3>
-            <p>Marketing</p>
+            <p lang="en">Marketing</p>
             <ul>
               <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
               <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
@@ -189,13 +193,13 @@
           </li>
           <li>
             <img
-              src="./Наша команда/4.png"
+              src="./Наша_команда/4.png"
               alt="фото Иван Николаев"
               width="270"
               height="260"
             />
             <h3>Иван Николаев</h3>
-            <p>UI Designer</p>
+            <p lang="en">UI Designer</p>
             <ul>
               <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
               <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
@@ -206,9 +210,82 @@
         </ul>
       </section>
       <!-- Постоянные клиенты -->
-      <section></section>
+      <section>
+        <h2>Постоянные клиенты</h2>
+        <ul>
+          <li>
+            <a href=""
+              ><img
+                src="./Постоянные_клиенты/1.svg"
+                alt="ссылка компании YA&CO"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./Постоянные_клиенты/2.svg"
+                alt="ссылка компании COMPANY TAGLINE HERE"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./Постоянные_клиенты/3.svg"
+                alt="ссылка компании COMPANY"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./Постоянные_клиенты/4.svg"
+                alt="ссылка компании FOSTER PETERS"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./Постоянные_клиенты/5.svg"
+                alt="ссылка компании BRABD"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./Постоянные_клиенты/6.svg"
+                alt="ссылка компании COMPANY TAG LINE"
+            /></a>
+          </li>
+        </ul>
+      </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <section>
+        <a href="./index.html" aria-label="логотип вебстудии">
+          <p><span>Web</span> Studio</p>
+        </a>
+        <address>
+          <ul>
+            <li>
+              <a href="https://goo.gl/maps/JaRLp71omfiaN1pi6" target="_blank"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li><a href="mailto:info@example.com">info@example.com</a></li>
+            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          </ul>
+        </address>
+        <h3>присоединяйтесь</h3>
+        <ul>
+          <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
+          <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
+          <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
+          <li><a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
+        </ul>
+
+        <h3>Подпишитесь на рассылку</h3>
+        <!-- <botton type="botton">Подписаться</botton> -->
+      </section>
+    </footer>
   </body>
 </html>
