--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Lorem" />
     <meta name="keywords" content="Lorem" />
     <title>Web Studio</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
@@ -257,6 +258,7 @@
           </li>
         </ul>
       </section>
+      
     </main>
 
     <footer>
