--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <nav>
         <a href="./index.html" aria-label="логотип вебстудии">
-          <p><span>Web</span> Studio</p>
+          <span>Web</span> Studio
         </a>
         <ul>
           <li>
@@ -48,7 +48,7 @@
             Эффективные решения<br />
             для вашего бизнеса
           </h1>
-          <!-- <botton type="botton">Заказать услугу</botton> -->
+          <button type="button">Заказать услугу</button>
         </div>
       </section>
 
@@ -258,11 +258,10 @@
           </li>
         </ul>
       </section>
-      
     </main>
 
     <footer>
-      <section>
+      <div>
         <a href="./index.html" aria-label="логотип вебстудии">
           <p><span>Web</span> Studio</p>
         </a>
@@ -277,17 +276,22 @@
             <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
           </ul>
         </address>
-        <h3>присоединяйтесь</h3>
+      </div>
+
+      <div>
+        <h3>Присоединяйтесь</h3>
         <ul>
           <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
           <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
           <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
           <li><a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
         </ul>
+      </div>
 
+      <div>
         <h3>Подпишитесь на рассылку</h3>
-        <!-- <botton type="botton">Подписаться</botton> -->
-      </section>
+        <button type="button">Подписаться</button>
+      </div>
     </footer>
   </body>
 </html>
